MS-DOS, not MD-DOS.

--- a/docs/glfwug.tex
+++ b/docs/glfwug.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Users Guide
 % API Version: 2.5
-% $Id: glfwug.tex,v 1.14 2005-04-14 20:43:42 marcus256 Exp $
+% $Id: glfwug.tex,v 1.15 2005-11-02 13:37:21 elmindreda Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -117,7 +117,7 @@ Solaris\texttrademark, QNX\textsuperscript{\textregistered} and
 Mac OS\textsuperscript{\textregistered} X.
 \item Mac OS\textsuperscript{\textregistered} X (Carbon)\footnote{Only a subset of the \GLFW\ API is supported for this platform at the time of writing.}
 \item AmigaOS\footnotemark[\value{footnote}]
-\item MD--DOS\textsuperscript{\textregistered}\footnotemark[\value{footnote}]
+\item MS--DOS\textsuperscript{\textregistered}\footnotemark[\value{footnote}]
 \end{itemize}
 
 
