--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Reference Manual
 % API Version: 2.6
-% $Id: glfwrm.tex,v 1.25 2007-03-15 03:20:19 elmindreda Exp $
+% $Id: glfwrm.tex,v 1.26 2007-03-24 14:08:16 elmindreda Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -1897,8 +1897,8 @@ should only happen when very short sleep times are specified, if at all.
 %-------------------------------------------------------------------------
 \pagebreak
 \section{Image and Texture Loading}
-In order to aid texture file loading, \GLFW\ has basic support for loading
-images from files.
+In order to aid loading of image data into textures, \GLFW\ has basic support
+for loading images from files and memory buffers.
 
 
 %-------------------------------------------------------------------------
@@ -1911,7 +1911,7 @@ GLFW\_ORIGIN\_UL\_BIT  & Specifies that the origin of the \textit{loaded} image 
 GLFW\_ALPHA\_MAP\_BIT  & Treat single component images as alpha maps rather than luminance maps\\ \hline
 \end{tabular}
 \end{center}
-\caption{Flags for \textbf{glfwReadImage}}
+\caption{Flags for functions loading image data into textures}
 \label{tab:rdimgflags}
 \end{table}
 
@@ -1981,6 +1981,83 @@ to GL\_ALPHA if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
 \begin{refnotes}
 \textbf{glfwReadImage} supports the Truevision Targa version 1 file format
 (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit paletted
+(24/32-bit color), 24-bit true color and 32-bit true color + alpha.
+
+Paletted images are translated into true color or true color + alpha pixel
+formats.
+
+Please note that \OpenGL~1.0 does not support single component alpha maps,
+so do not use images with Format = GL\_ALPHA directly as textures under
+\OpenGL~1.0.
+\end{refnotes}
+
+
+%-------------------------------------------------------------------------
+\subsection{glfwReadMemoryImage}
+
+\textbf{C language syntax}
+\begin{lstlisting}
+int glfwReadMemoryImage( const void *data, long size, GLFWimage *img, int flags )
+\end{lstlisting}
+
+\begin{refparameters}
+\begin{description}
+\item [\textit{data}]\ \\
+  The memory buffer holding the contents of the file that should be read.
+\item [\textit{size}]\ \\
+  The size, in bytes, of the memory buffer.
+\item [\textit{img}]\ \\
+  Pointer to a GLFWimage struct, which will hold the information about
+  the loaded image (if the read was successful).
+\item [\textit{flags}]\ \\
+  Flags for controlling the image reading process. Valid flags are listed
+  in table \ref{tab:rdimgflags}
+\end{description}
+\end{refparameters}
+
+\begin{refreturn}
+The function returns GL\_TRUE if the image was loaded successfully.
+Otherwise GL\_FALSE is returned.
+\end{refreturn}
+
+\begin{refdescription}
+The function reads an image from the memory buffer specified by the parameter
+\textit{data} and returns the image information and data in a GLFWimage
+structure, which has the following definition:
+
+\begin{lstlisting}
+typedef struct {
+    int Width, Height;    // Image dimensions
+    int Format;           // OpenGL pixel format
+    int BytesPerPixel;    // Number of bytes per pixel
+    unsigned char *Data;  // Pointer to pixel data
+} GLFWimage;
+\end{lstlisting}
+
+\textit{Width} and \textit{Height} give the dimensions of the image.
+\textit{Format} specifies an \OpenGL\ pixel format, which can be
+GL\_LUMINANCE or GL\_ALPHA (for gray scale images), GL\_RGB or GL\_RGBA.
+\textit{BytesPerPixel} specifies the number of bytes per pixel.
+\textit{Data} is a pointer to the actual pixel data.
+
+By default the read image is rescaled to the nearest larger $2^m\times2^n$
+resolution using bilinear interpolation, if necessary, which is useful if
+the image is to be used as an \OpenGL\ texture. This behavior can be
+disabled by setting the GLFW\_NO\_RESCALE\_BIT flag.
+
+Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the first pixel in
+\textit{img->Data} is the lower left corner of the image. If the flag
+GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
+corner.
+
+For single component images (i.e. gray scale), \textit{Format} is set
+to GL\_ALPHA if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
+\textit{Format} is set to GL\_LUMINANCE.
+\end{refdescription}
+
+\begin{refnotes}
+\textbf{glfwReadMemoryImage} supports the Truevision Targa version 1 file
+format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit paletted
 (24/32-bit color), 24-bit true color and 32-bit true color + alpha.
 
 Paletted images are translated into true color or true color + alpha pixel
@@ -2077,6 +2154,140 @@ it is uploaded as a luminance texture.
 
 \begin{refnotes}
 \textbf{glfwLoadTexture2D} supports the Truevision Targa version 1 file
+format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit
+paletted (24/32-bit color), 24-bit true color and 32-bit true color +
+alpha.
+
+Paletted images are translated into true color or true color + alpha pixel
+formats.
+
+The read texture is always rescaled to the nearest larger $2^m\times2^n$
+resolution using bilinear interpolation, if necessary, since \OpenGL\
+requires textures to have a $2^m\times2^n$ resolution.
+
+If the GL\_SGIS\_generate\_mipmap extension, which is usually hardware
+accelerated, is supported by the \OpenGL\ implementation it will be used
+for mipmap generation. Otherwise the mipmaps will be generated by \GLFW\
+in software.
+
+Since \OpenGL~1.0 does not support single component alpha maps, alpha map
+textures are converted to RGBA format under \OpenGL~1.0 when the
+GLFW\_ALPHA\_MAP\_BIT flag is set and the loaded texture is a single
+component texture. The red, green and blue components are set to 1.0.
+\end{refnotes}
+
+
+%-------------------------------------------------------------------------
+\subsection{glfwLoadMemoryTexture2D}
+
+\textbf{C language syntax}
+\begin{lstlisting}
+int glfwLoadMemoryTexture2D( const void *data, long size, int flags )
+\end{lstlisting}
+
+\begin{refparameters}
+\begin{description}
+\item [\textit{data}]\ \\
+  The memory buffer holding the contents of the file that should be loaded.
+\item [\textit{size}]\ \\
+  The size, in bytes, of the memory buffer.
+\item [\textit{flags}]\ \\
+  Flags for controlling the texture loading process. Valid flags are
+  listed in table \ref{tab:ldtexflags}.
+\end{description}
+\end{refparameters}
+
+\begin{refreturn}
+The function returns GL\_TRUE if the texture was loaded successfully.
+Otherwise GL\_FALSE is returned.
+\end{refreturn}
+
+\begin{refdescription}
+The function reads an image from the memory buffer specified by the parameter
+\textit{data} and uploads the image to \OpenGL\ texture memory (using the
+\textbf{glTexImage2D} function).
+
+If the GLFW\_BUILD\_MIPMAPS\_BIT flag is set, all mipmap levels for the
+loaded texture are generated and uploaded to texture memory.
+
+Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the origin of the texture
+is the lower left corner of the loaded image. If the flag
+GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
+corner.
+
+For single component images (i.e. gray scale), the texture is uploaded as
+an alpha mask if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
+it is uploaded as a luminance texture.
+\end{refdescription}
+
+\begin{refnotes}
+\textbf{glfwLoadMemoryTexture2D} supports the Truevision Targa version 1 file
+format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit
+paletted (24/32-bit color), 24-bit true color and 32-bit true color +
+alpha.
+
+Paletted images are translated into true color or true color + alpha pixel
+formats.
+
+The read texture is always rescaled to the nearest larger $2^m\times2^n$
+resolution using bilinear interpolation, if necessary, since \OpenGL\
+requires textures to have a $2^m\times2^n$ resolution.
+
+If the GL\_SGIS\_generate\_mipmap extension, which is usually hardware
+accelerated, is supported by the \OpenGL\ implementation it will be used
+for mipmap generation. Otherwise the mipmaps will be generated by \GLFW\
+in software.
+
+Since \OpenGL~1.0 does not support single component alpha maps, alpha map
+textures are converted to RGBA format under \OpenGL~1.0 when the
+GLFW\_ALPHA\_MAP\_BIT flag is set and the loaded texture is a single
+component texture. The red, green and blue components are set to 1.0.
+\end{refnotes}
+
+
+%-------------------------------------------------------------------------
+\subsection{glfwLoadTextureImage2D}
+
+\textbf{C language syntax}
+\begin{lstlisting}
+int glfwLoadTextureImage2D( GLFWimage *img, int flags )
+\end{lstlisting}
+
+\begin{refparameters}
+\begin{description}
+\item [\textit{img}]\ \\
+  Pointer to a GLFWimage struct holding the information about
+  the image to be loaded.
+\item [\textit{flags}]\ \\
+  Flags for controlling the texture loading process. Valid flags are
+  listed in table \ref{tab:ldtexflags}.
+\end{description}
+\end{refparameters}
+
+\begin{refreturn}
+The function returns GL\_TRUE if the texture was loaded successfully.
+Otherwise GL\_FALSE is returned.
+\end{refreturn}
+
+\begin{refdescription}
+The function uploads the image specified by the parameter \textit{img} to
+\OpenGL\ texture memory (using the \textbf{glTexImage2D} function).
+
+If the GLFW\_BUILD\_MIPMAPS\_BIT flag is set, all mipmap levels for the
+loaded texture are generated and uploaded to texture memory.
+
+Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the origin of the texture
+is the lower left corner of the loaded image. If the flag
+GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
+corner.
+
+For single component images (i.e. gray scale), the texture is uploaded as
+an alpha mask if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
+it is uploaded as a luminance texture.
+\end{refdescription}
+
+\begin{refnotes}
+\textbf{glfwLoadTextureImage2D} supports the Truevision Targa version 1 file
 format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit
 paletted (24/32-bit color), 24-bit true color and 32-bit true color +
 alpha.
