--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Reference Manual
 % API Version: 2.6
-% $Id: glfwrm.tex,v 1.26 2007-03-24 14:08:16 elmindreda Exp $
+% $Id: glfwrm.tex,v 1.27 2007-03-24 14:45:31 elmindreda Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -16,7 +16,7 @@
 
 % PDF specific document settings
 \hypersetup{pdftitle={GLFW Reference Manual}}
-\hypersetup{pdfauthor={Camilla Berglund}}
+\hypersetup{pdfauthor={Marcus Geelnard}}
 \hypersetup{pdfkeywords={GLFW,OpenGL,reference,manual}}
 
 
