--- a/docs/glfwug.tex
+++ b/docs/glfwug.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Users Guide
-% API Version: 2.5
-% $Id: glfwug.tex,v 1.15 2005-11-02 13:37:21 elmindreda Exp $
+% API Version: 2.6
+% $Id: glfwug.tex,v 1.16 2007-03-24 14:45:31 elmindreda Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -9,7 +9,7 @@
 
 % Document title and API version
 \newcommand{\glfwdoctype}[1][0]{Users Guide}
-\newcommand{\glfwapiver}[1][0]{2.5}
+\newcommand{\glfwapiver}[1][0]{2.6}
 
 % Common document settings and macros
 \input{glfwdoc.sty}
@@ -50,7 +50,7 @@ Trademarks
 
 \small
 OpenGL and IRIX are registered trademarks of Silicon Graphics, Inc.\linebreak
-Microsoft, Windows and MS­-DOS are registered trademarks of Microsoft Corporation.\linebreak
+Microsoft and Windows are registered trademarks of Microsoft Corporation.\linebreak
 Mac OS is a registered trademark of Apple Computer, Inc.\linebreak
 Linux is a registered trademark of Linus Torvalds.\linebreak
 FreeBSD is a registered trademark of Wind River Systems, Inc.\linebreak
@@ -115,9 +115,7 @@ X Window System\texttrademark, e.g. Linux\textsuperscript{\textregistered},
 IRIX\textsuperscript{\textregistered}, FreeBSD\textsuperscript{\textregistered},
 Solaris\texttrademark, QNX\textsuperscript{\textregistered} and
 Mac OS\textsuperscript{\textregistered} X.
-\item Mac OS\textsuperscript{\textregistered} X (Carbon)\footnote{Only a subset of the \GLFW\ API is supported for this platform at the time of writing.}
-\item AmigaOS\footnotemark[\value{footnote}]
-\item MS--DOS\textsuperscript{\textregistered}\footnotemark[\value{footnote}]
+\item Mac OS\textsuperscript{\textregistered} X (Carbon)\footnote{Support for joysticks missing at the time of writing.}
 \end{itemize}
 
 
@@ -343,6 +341,8 @@ GLFW\_ACCUM\_BLUE\_BITS  & 0                & Number of bits for the blue channe
 GLFW\_ACCUM\_ALPHA\_BITS & 0                & Number of bits for the alpha channel of the accumulator buffer.\\ \hline
 GLFW\_AUX\_BUFFERS       & 0                & Number of auxiliary buffers.\\ \hline
 GLFW\_STEREO             & GL\_FALSE        & Specify if stereo rendering should be supported (can be GL\_TRUE or GL\_FALSE).\\ \hline
+GLFW\_WINDOW\_NO\_RESIZE & GL\_FALSE        & Specify whether the window can be resized (not used for fullscreen windows).\\ \hline
+GLFW\_FSAA\_SAMPLES      & 0                & Number of samples to use for the multisampling buffer. Zero disables multisampling.\\ \hline
 \end{tabular}
 \end{center}
 \caption{Targets for \textbf{glfwOpenWindowHint}}
@@ -439,6 +439,8 @@ GLFW\_ACCUM\_BLUE\_BITS  & Number of bits for the blue channel of the accumulato
 GLFW\_ACCUM\_ALPHA\_BITS & Number of bits for the alpha channel of the accumulator buffer.\\ \hline
 GLFW\_AUX\_BUFFERS       & Number of auxiliary buffers.\\ \hline
 GLFW\_STEREO             & GL\_TRUE if stereo rendering is supported, else GL\_FALSE.\\ \hline
+GLFW\_FSAA\_SAMPLES      & Number of multisampling buffer samples. Zero indicated multisampling is disabled.\\ \hline
+GLFW\_WINDOW\_NO\_RESIZE & GL\_TRUE if the window cannot be resized, else GL\_FALSE.\\ \hline
 \end{tabular}
 \end{center}
 \caption{Window parameters for \textbf{glfwGetWindowParam}}
